# matter-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO-1.0.md  deny.toml  justfile
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: fixture.rs  lib.rs
crates/integration-tests/tests/: clusters_binding.rs  clusters_color_control.rs  clusters_descriptor.rs  clusters_diagnostics.rs  clusters_door_lock.rs  clusters_electrical.rs  clusters_fan_control.rs  clusters_labels_binding.rs  clusters_level_control.rs  clusters_measurement.rs  clusters_mgmt.rs  clusters_onoff.rs  clusters_power_source.rs  clusters_sensors.rs  clusters_thermostat.rs  clusters_time_sync.rs  clusters_window_covering.rs  enforcement.rs  groups_acl.rs  icd_checkin.rs  im_ops.rs  integration.rs  multi_admin.rs  ota_flow.rs
crates/matter-bdx/: Cargo.toml  README.md
crates/matter-bdx/src/: error.rs  lib.rs  message_type.rs  messages.rs  sender.rs
crates/matter-bdx/tests/: loopback.rs
crates/matter-ble/: Cargo.toml  README.md
crates/matter-ble/src/: advert.rs  central.rs  error.rs  handshake.rs  lib.rs  session.rs
crates/matter-cert/: Cargo.toml  README.md
crates/matter-cert/src/: builder.rs  certificate.rs  chain.rs  error.rs  extensions.rs  lib.rs  name.rs  operational.rs  public_key.rs  signature.rs  test_support.rs  time.rs  tlv_tags.rs  x509.rs
crates/matter-cert/tests/: certificates.rs  chain.rs  operational_certs.rs
crates/matter-clusters/fuzz/: Cargo.toml
crates/matter-codec/: CHANGELOG.md  Cargo.toml  README.md
crates/matter-codec/benches/: decode.rs  encode.rs
crates/matter-codec/fuzz/: Cargo.toml
crates/matter-codec/src/: element_type.rs  error.rs  lib.rs  reader.rs  tag.rs  tag_control.rs  value.rs  writer.rs
crates/matter-codec/tests/: chip_composite_vector.rs  proptest_round_trip.rs  vectors.rs
crates/matter-commissioning/: Cargo.toml  README.md
crates/matter-commissioning/examples/: commission_ip.rs  control_onoff.rs
crates/matter-commissioning/fuzz/: Cargo.toml
crates/matter-commissioning/src/: attestation.rs  error.rs  lib.rs  noc.rs  setup.rs  state_machine.rs  test_support.rs  thread_dataset.rs  wiretrace.rs
crates/matter-commissioning/tests/: attestation_negative.rs  attestation_parse.rs  attestation_response_byte_parity.rs  attestation_response_proptest.rs  cd_verification.rs  chip_cd_vector.rs  commission_ble_loopback.rs  commission_loopback.rs  commissioning_byte_parity.rs  commissioning_e2e.rs  im_byte_parity.rs  im_roundtrip.rs  mock_device_attestation_csr.rs  mock_pki.rs  noc_byte_parity.rs  noc_fabric_record.rs  noc_happy_path.rs  noc_negative.rs  noc_proptest.rs  noc_round_trip.rs  pase_over_btp.rs  setup_byte_parity.rs  setup_proptest.rs  state_machine_attestation.rs  state_machine_network.rs  state_machine_noc.rs  state_machine_unit.rs  x509_builder_gate.rs
crates/matter-controller/: CHANGELOG.md  Cargo.toml  README.md
crates/matter-controller/examples/: ble_scan.rs  commission_ble_thread.rs  commission_ble_wifi.rs  controller_quickstart.rs  d_hardware_extras.rs  dump_attributes.rs  e3_group_multicast.rs  e4_subscription_survives_reboot.rs  fabric_management.rs  group_acl_test.rs  icd_register_listen.rs  list_nodes.rs  open_window.rs  power.rs  provider_server.rs  serve_ota.rs
crates/matter-controller/src/: acl.rs  actor.rs  admin.rs  binding.rs  ble_commission.rs  builder.rs  commission.rs  controller.rs  credentials.rs  error.rs  fabric.rs  group.rs  handshake_socket.rs  icd.rs  icd_listener.rs  lib.rs  node.rs  node_info.rs  opcreds.rs  provider_server.rs  resumption.rs  snapshot.rs  state.rs  subscription.rs  trust.rs
crates/matter-controller/tests/: restart_stability.rs
crates/matter-crypto/: Cargo.toml  README.md
crates/matter-crypto/benches/: case.rs
crates/matter-crypto/src/: aead.rs  case.rs  checkin.rs  error.rs  lib.rs  operational.rs  pase.rs  test_support.rs
crates/matter-crypto/tests/: case_byte_parity.rs  case_cert_expiry.rs  case_roundtrip.rs  pase_byte_parity.rs  pase_roundtrip.rs
crates/matter-interaction/: Cargo.toml  README.md
crates/matter-interaction/benches/: report_parse.rs
crates/matter-interaction/src/: accumulator.rs  error.rs  event.rs  invoke.rs  invoke_server.rs  lib.rs  path.rs  read.rs  status.rs  subscription.rs  timed.rs  write.rs
crates/matter-interaction/tests/: chunk_byte_parity.rs  im_byte_parity.rs  im_roundtrip.rs  im_truncation.rs
crates/matter-ota/: Cargo.toml  README.md
crates/matter-ota/src/: lib.rs  provider.rs
crates/matter-ota/tests/: byte_parity.rs
crates/matter-transport/: Cargo.toml  README.md
crates/matter-transport/benches/: frame.rs
crates/matter-transport/proptest-regressions/: protocol_header.txt
crates/matter-transport/src/: discovery.rs  error.rs  framing.rs  lib.rs  local_addr.rs  mdns.rs  mdns_sd_discovery.rs  mrp.rs  protocol_header.rs  session.rs  tokio_udp.rs  transport.rs  udp.rs
crates/matter-transport/tests/: framing_byte_parity.rs  framing_roundtrip.rs  loopback.rs  protocol_header_byte_parity.rs  session_manager.rs
xtask/: Cargo.toml
xtask/model/: clusters.json
xtask/scripts/capture-attestation/: index.js  package-lock.json  package.json
xtask/scripts/capture-case/: index.js  package-lock.json  package.json
xtask/scripts/capture-cert/: index.js  package-lock.json  package.json
xtask/scripts/capture-clusters/: index.js  package-lock.json  package.json
xtask/scripts/capture-commission-trace/: index.js  package-lock.json  package.json
xtask/scripts/capture-commissioning/: index.js  package-lock.json  package.json
xtask/scripts/capture-framing/: index.js  package-lock.json  package.json
xtask/scripts/capture-im/: index.js  package-lock.json  package.json
xtask/scripts/capture-noc/: index.js  package.json
xtask/scripts/capture-onoff-trace/: index.js  (+2 more)
xtask/src/: capture_cd.rs  capture_cert_chip.rs  capture_commissioning.rs  integration.rs  lib.rs  main.rs  trace_diff.rs
xtask/tests/: clusters_json_freeze.rs  clusters_vectors_freeze.rs  codegen_golden.rs  codegen_real_model.rs
(+290 files in other folders)
