[workspace]
resolver = "2"
members = [
    "crates/matter-codec",
    "crates/matter-cert",
    "crates/matter-crypto",
    "crates/matter-transport",
    "crates/matter-commissioning",
    "crates/matter-clusters",
    "crates/matter-controller",
    "xtask",
]

# Shared metadata picked up by each crate via `field.workspace = true`.
# The crate `version` is intentionally NOT shared — every crate is versioned
# independently and bumps on its own milestone cadence (see README).
[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/phunapps/matter-rust"
homepage = "https://github.com/phunapps/matter-rust"
authors = ["matter-rust contributors"]
keywords = ["matter", "smart-home", "iot", "csa", "thread"]
categories = ["network-programming", "embedded", "cryptography"]

# Lints enforced workspace-wide. Each crate opts in with `[lints] workspace = true`.
# CI runs clippy with `-D warnings` so any of these becoming a warning fails the build.
[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
missing_safety_doc = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
undocumented_unsafe_blocks = "warn"
# General hygiene
pedantic = { level = "warn", priority = -1 }
# Pedantic lints that produce too much noise for a library at this stage.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"

# Common dependency versions, so every member crate pulls the same release.
# Add to this table — do not bump per-crate without discussion.
[workspace.dependencies]
proptest = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

# Release profile defaults. Keep these conservative; consumers can override.
[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
