[package]
name = "xtask"
version = "0.0.0"
description = "Internal build helpers, code generation, and test vector capture tools."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Added by M6.4.3 capture-cd: generate synthetic CSA-test CD signing root
# (ring), build the inner CD TLV (matter-codec), wrap the signed blob in
# CMS SignedData using the cms crate's types, and serialise the JSON
# fixtures (base64 + serde_json).
matter-codec = { path = "../crates/matter-codec", version = "0.2.0" }
# capture-commissioning post-processing: parse captured IM messages
# (matter-interaction) + the AddNOC certificate (matter-cert) to build the
# byte-parity fixture.
matter-cert = { path = "../crates/matter-cert", version = "0.2.0" }
matter-interaction = { path = "../crates/matter-interaction", version = "0.2.0" }
base64 = { workspace = true }
cms = { workspace = true }
const-oid = "0.9"
der = { workspace = true }
hex = { workspace = true }
ring = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spki = { version = "0.7", default-features = false, features = ["alloc"] }
x509-cert = { version = "0.2", default-features = false }
