[package]
name = "matter-bdx"
version = "0.2.0"
description = "Matter Bulk Data Exchange (BDX) protocol: message codecs + receiver-driven sender."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["matter", "bdx", "ota", "iot", "file-transfer"]
categories = ["network-programming", "embedded"]

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
thiserror = { workspace = true }
