[package]
name = "matter-cert"
version = "0.2.0-pre"
description = "Matter protocol certificate parsing and chain validation."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["matter", "certificate", "x509", "iot"]
categories = ["cryptography", "parser-implementations"]
readme = "README.md"

[features]
# Enables `matter_cert::test_support` — a module of cert-construction
# helpers used by this crate's own tests/ files. NOT part of the
# stable public API. Production callers must not enable this feature.
test-support = []

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
der = { workspace = true }
matter-codec = { path = "../matter-codec", version = "0.1.0" }
ring = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
toml = { workspace = true }
proptest = { workspace = true }
# Self-reference so test compilation enables the test-support feature,
# making the test_support module visible to tests/* without exposing
# it to downstream crates.
matter-cert = { path = ".", version = "0.2.0-pre", features = ["test-support"] }
