[package]
name = "matter-commissioning"
version = "0.0.0"
description = "Matter commissioning state machine: setup payload, attestation, NOC issuance, network commissioning."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["matter", "commissioning", "iot", "smart-home"]
categories = ["network-programming", "embedded"]
readme = "README.md"

[features]
default = []
## Expose cursor-jump helpers used exclusively by the crate's own
## integration tests (tests/state_machine_network.rs and similar).
## Double-underscore prefix follows the Tokio/Serde convention: "internal,
## do not depend on". Never enable in production builds.
__test_shortcuts = []
## Enable `tracing` instrumentation spans on `Commissioner`'s public
## methods (`poll`, `on_response`, `on_case_established`).
## Off by default; opt-in per Matter-rust's zero-cost-when-unused policy.
tracing = ["dep:tracing"]

[lints]
workspace = true

[dependencies]
matter-codec = { path = "../matter-codec", version = "0.1.0" }
matter-cert = { path = "../matter-cert", version = "0.2.0-pre" }
matter-crypto = { path = "../matter-crypto", version = "0.1.0-pre" }
matter-transport = { path = "../matter-transport", version = "0.1.0-pre" }
cms = { workspace = true }
der = { workspace = true }
x509-parser = { workspace = true }
rustls-webpki = { workspace = true }
rustls-pki-types = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
tracing = { version = "0.1", optional = true, default-features = false, features = ["attributes"] }

[dev-dependencies]
hex = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
p256 = { workspace = true }

[[test]]
name = "state_machine_network"
required-features = ["__test_shortcuts"]
