[package]
name = "matter-controller"
version = "0.0.0"
description = "High-level Matter controller API: commission, read, write, invoke, subscribe."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["matter", "controller", "smart-home", "iot"]
categories = ["api-bindings", "network-programming"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
matter-codec = { path = "../matter-codec", version = "0.1.0" }
matter-cert = { path = "../matter-cert", version = "0.2.0-pre" }
matter-crypto = { path = "../matter-crypto", version = "0.1.0-pre" }
matter-transport = { path = "../matter-transport", version = "0.1.0-pre" }
matter-commissioning = { path = "../matter-commissioning", version = "0.0.0", features = ["driver"] }
matter-interaction = { path = "../matter-interaction", version = "0.1.0-pre" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
matter-clusters = { path = "../matter-clusters", version = "0.0.0" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "controller_quickstart"

[[example]]
name = "power"

[[example]]
name = "dump_attributes"
