[package]
name = "matter-controller"
version = "0.1.0"
description = "High-level Matter controller API: commission, read, write, invoke, subscribe."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["matter", "controller", "smart-home", "iot"]
categories = ["api-bindings", "network-programming"]
readme = "README.md"

[lints]
workspace = true

[features]
# BLE/BTP commissioning (`MatterController::commission_ble`). Pulls the
# `matter-ble` central role (btleplug + libdbus on Linux / CoreBluetooth on
# macOS), so it is opt-in. The default IP commissioning path needs none of it.
ble = ["dep:matter-ble", "matter-ble/central"]

[dependencies]
matter-codec = { path = "../matter-codec", version = "0.1.0" }
matter-cert = { path = "../matter-cert", version = "0.1.0" }
matter-crypto = { path = "../matter-crypto", version = "0.1.0" }
matter-transport = { path = "../matter-transport", version = "0.1.0" }
matter-commissioning = { path = "../matter-commissioning", version = "0.1.0", features = ["driver"] }
matter-interaction = { path = "../matter-interaction", version = "0.1.0" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
matter-clusters = { path = "../matter-clusters", version = "0.1.0" }
matter-ota = { path = "../matter-ota", version = "0.1.0" }
matter-bdx = { path = "../matter-bdx", version = "0.1.0" }
matter-ble = { path = "../matter-ble", version = "0.1.0", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "controller_quickstart"

[[example]]
name = "power"

[[example]]
name = "dump_attributes"

[[example]]
name = "fabric_management"

[[example]]
name = "d_hardware_extras"

[[example]]
name = "e3_group_multicast"

[[example]]
name = "group_acl_test"

[[example]]
name = "open_window"

[[example]]
name = "ble_scan"
required-features = ["ble"]

[[example]]
name = "commission_ble_thread"
required-features = ["ble"]

[[example]]
name = "commission_ble_wifi"
required-features = ["ble"]
