[package]
name = "matter-crypto"
version = "0.0.0"
description = "Matter protocol session establishment: PASE (SPAKE2+) and CASE (SIGMA)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["matter", "spake2", "sigma", "iot", "cryptography"]
categories = ["cryptography"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
matter-codec = { path = "../matter-codec", version = "0.1.0" }
matter-cert = { path = "../matter-cert", version = "0.0.0" }
thiserror = { workspace = true }
