[package]
name = "matter-interaction"
version = "0.1.0-pre"
description = "Matter Interaction Model message framing: invoke, read, and write request/response encoding."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["matter", "iot", "smart-home", "interaction-model"]
categories = ["network-programming", "embedded"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
matter-codec = { path = "../matter-codec", version = "0.1.0" }
thiserror = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
