[package]
name = "matter-ota"
version = "0.0.0"
description = "Matter OTA Software Update Provider: OtaProvider (0x0029) command handlers."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["matter", "ota", "firmware", "iot", "smart-home"]
categories = ["network-programming", "embedded"]

[lints]
workspace = true

[dependencies]
matter-codec = { path = "../matter-codec", version = "0.1.0" }
matter-interaction = { path = "../matter-interaction", version = "0.1.0-pre" }
matter-clusters = { path = "../matter-clusters", version = "0.0.0" }
thiserror = { workspace = true }
