[package]
name = "matter-clusters-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Not a workspace member — kept separate so it can require nightly Rust
# without dragging the rest of the workspace's MSRV up.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
matter-clusters = { path = ".." }

[[bin]]
name = "cluster_decoders"
path = "fuzz_targets/cluster_decoders.rs"
test = false
doc = false
bench = false
